definitions/agent-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent
  labels:
    app: agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent
  template:
    metadata:
      labels:
        app: agent
    spec:
      containers:
        - image: quay.io/reconmap/agent:latest
          imagePullPolicy: IfNotPresent
          name: rmap-agent
