definitions/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - image: redis:6.0
          imagePullPolicy: IfNotPresent
          name: rmap-redis
          command: ["redis-server", "--requirepass", "REconDIS"]
