definitions/agent-service.yml
apiVersion: v1
kind: Service
metadata:
    name: agent-service
    labels:
        app: agent
spec:
    ports:
        - port: 5520
          protocol: TCP
    selector:
        app: agent
    type: NodePort
