definitions/rest-api-service.yml
apiVersion: v1
kind: Service
metadata:
    name: rest-api-service
    labels:
        app: rest-api
spec:
    ports:
        - port: 5510
          protocol: TCP
    selector:
        app: rest-api
    type: NodePort
