definitions/web-client-service.yml
apiVersion: v1
kind: Service
metadata:
    name: web-client-service
    labels:
        app: web-client
spec:
    ports:
        - port: 5500
          protocol: TCP
    selector:
        app: web-client
    type: NodePort
