definitions/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-client-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: reconmap.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-client-service
                port:
                  number: 5500
